--- a/views/sheet/menu.ejs
+++ b/views/sheet/menu.ejs
@@ -1,1 +1,1 @@
-<a href="/products">Bảng giá camera</a> | <a href="/sheet/">Bảng giá phụ kiện</a> | <a href="/sheet/khuyenmai">Khuyến mãi</a>
+<a href="/products">Bảng giá camera</a> | <a href="/sheet/">Bảng giá phụ kiện</a> | <a href="/sheet/khuyenmai">Khuyến mãi</a> | <a href="/sheet/khuyenmaiwifi">Camera Wifi</a>
